# tstr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  UPGRADING.md
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml
editor/: README.md
editor/textmate/: info.plist  tstr.tmLanguage.json
editor/vim/ftdetect/: tstr.vim
editor/vim/syntax/: tstr.vim
examples/demo/: basic-math.test.tstr  config.const.tstr  const-usage.test.tstr  consumer.test.tstr  data-flow.test.tstr  file-loading.test.tstr  json-ops.test.tstr  skip-test.test.tstr  tstr.yaml
examples/demo/cases/: 01-data-flow.test.tstr  basic-math.test.tstr  file-loading.test.tstr  json-ops.test.tstr  skip-test.test.tstr
examples/demo/fixtures/: group.json
scripts/: migrate-disabled.py  migrate-leaf-scaffolding.py  migrate-syntax.py
src/: ast.rs  cli.rs  config.rs  discovery.rs  eval.rs  filter.rs  http.rs  lib.rs  main.rs  output.rs  runner.rs  scheduler.rs  value.rs  version.rs
src/parser/: expr.rs  http.rs  mod.rs  primitives.rs  statement.rs
tests/: parse_fixtures.rs
tests/fixtures/: add-member.test.tstr  comments.test.tstr  const-values.const.tstr  create-group.test.tstr  exporter.exporter.tstr  expressions.test.tstr  field-mutation.test.tstr  if-cond.test.tstr  js-blocks.test.tstr  json-objects.test.tstr  minimal.tstr  multi-service.test.tstr  property-access.test.tstr  regex-ops.test.tstr  status-patterns.test.tstr  string-escapes.test.tstr  whitespace-insensitive.test.tstr
