[package]
name = "tstr"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "CLI HTTP API test runner with a custom DSL"
repository = "https://github.com/eightdeekay/tstr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winnow = "0.7"
clap = { version = "=4.4.8", features = ["derive"] }
reqwest = { version = "=0.11.18", default-features = false, features = ["json", "default-tls", "blocking"] }
tokio = { version = "=1.32.0", features = ["full"] }
serde_json = "=1.0.107"
serde = { version = "=1.0.188", features = ["derive"] }
serde_yaml = "=0.9.25"
rayon = "=1.7.0"
regex = "=1.9.5"
atty = "=0.2.14"
terminal_size = "=0.3.0"
idna = "=0.4.0"
url = "=2.4.1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4.3"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "=3.8.0"
